# TestManager

./: .gitignore  CMakeLists.txt  DatabaseDef.h  build_linux.sh  build_mingw.cmd  build_msvc_nmake.cmd  build_vs2013_amd64.cmd  build_vs2017_amd64.cmd  config.cmake  env2017.cmd  main.cpp
inc/: Connection.h  DatabaseDef.h  StdInc.h  TestManager.h
pgc/: CheckDbStructure.h  CheckDbStructure.pgc
res/: TestManager.qrc
src/: Connection.cpp  DatabaseDef.cpp  TestManager.cpp  main.cpp
ui/: Connection.ui  TestManager.ui
